syntax = "proto3";
package pb;
option go_package = "github.com/carloscacb333/codeme-go/pb";

import "user.proto";
import "common.proto";


message SignUpReq{
    string username  =2;
    string firstName =3;
    string lastName  =4;
    string email     =5;
    optional string gender    =6;
    string password  =7;
    optional string picture     =8;
    optional string phone     =9;
}

message SignUpRes{
    STATUS status = 1;
    User user = 2;
    optional string token = 3;
}

message SignInReq{
    string username  =2;
    string password  =3;
}

message SignInRes{
    STATUS status = 1;
    User user = 2;
    optional string token = 3;
}

service AuthSvc{
    rpc SignUp(SignUpReq) returns (SignUpRes);
    rpc SignIn(SignInReq) returns (SignInRes);
}